RBAC/idp/deploy/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbac-idp
  labels:
    app.kubernetes.io/instance: rbac-idp
spec:
  replicas: 1
  selector: 
    matchLabels:
      app.kubernetes.io/instance: rbac-idp
  template:
    metadata:
      labels: 
        app.kubernetes.io/instance: rbac-idp
    spec:
      containers:
      - name: idp
        image: IMAGE_TAG
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: leader-socket
          mountPath: /var/lib/leaderelex/
      - name: leader-elector
        image: leaderelex:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: leader-socket
          mountPath: /var/lib/leaderelex/
      volumes:
      - name: leader-socket
        emptyDir: {}

...
