RBAC/idp/deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: idp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: rbac-idp

...
