RBAC/idp/deploy/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rbac-auth
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - "sso.OVERLAY_ME"
    secretName: cert-autho
  rules:
  - host: sso.OVERLAY_ME
    http:
      paths:
      - path: /login
        backend:
          serviceName: idp
          servicePort: 80
      - path: /logout
        backend:
          serviceName: idp
          servicePort: 80
      - path: /consent
        backend:
          serviceName: idp
          servicePort: 80
      - path: /assets
        backend:
          serviceName: idp
          servicePort: 80
      - path: /
        backend:
          serviceName: idp
          servicePort: 80
